-
Bug
-
Resolution: Fixed
-
P3: Somewhat important
-
6.2.3
WebEngineView.userScripts property has changed in Qt6 to be QWebEngineScriptCollection type instead of an array of WebEngineScripts.
It could also contain a snippet about how to use it now since WebEngineScript is not constructible anymore and assigning an array to userScripts wouldn't work anyway even if the user figures out that WebEngine.script() should be used to create it now.
- relates to
-
QTBUG-96627 Wrong documentation for WebEngine(View|Profile).userScripts
-
- Closed
-
| For Gerrit Dashboard: QTBUG-100404 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 395026,13 | Add userScript docs for qml land | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 400085,2 | Add userScript docs for qml land | 6.3 | qt/qtwebengine | Status: MERGED | +2 | 0 |
| 400086,2 | Add userScript docs for qml land | 6.2 | qt/qtwebengine | Status: MERGED | +2 | 0 |