Add userScript docs for qml land

WebEngineScript docs were missing after moving classes to core.
Moreover we changed WebEngineScript to be a qml value type and
we introduced WebEngineScriptCollection to mirror C++ class.

Add the documentation for WebEngineScript, WebEngineScriptCollection
and WebEngine.script() method.

Task-number: QTBUG-100404
Change-Id: Ifed1bd1fa398a8634df0dc1bd44111e1a09ded04
Reviewed-by: Kirill Burtsev <kirill.burtsev@qt.io>
(cherry picked from commit 34f509a0a2059c54f9217c5a3dd8e3681bcc0964)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>